fixed spacing in profile name and company as well as fixed location display

--- a/src/App.css
+++ b/src/App.css
@@ -360,6 +360,10 @@ table th {
   background: var(--light-color);
 }
 
+.spacing {
+  word-spacing: 1em;
+}
+
 /* Navbar */
 .navbar {
   display: flex;
